# go-call-rust

./: main.go  run.sh
hello/: Cargo.toml
hello/src/: lib.rs
